Edit lax grid picture size.

--- a/homework/2015/laxwendroff/laxgrid.tex
+++ b/homework/2015/laxwendroff/laxgrid.tex
@@ -1,14 +1,14 @@
 %\fontsize{4.5pt}{4pt}\selectfont
-\tiny
-\psset{unit=1cm,dash=3pt 3pt}
-\begin{pspicture}(-2.2,-0.9)(2.2,1.7)
+\normalsize
+\psset{unit=2cm,dash=3pt 3pt}
+\begin{pspicture}(-2.2,-0.9)(2.1,1.7)
   \psset{linewidth=0.2pt}
   \psset{linecolor=black}
 
-  \psline{->}(-2.1,-0.5)(-1.8,-0.5)
-  \uput{0.1}[r](-1.8,-0.5){$x$}
-  \psline{->}(-2.1,-0.5)(-2.1,-0.2)
-  \uput{0.1}[u](-2.1,-0.2){$t$}
+  \psline{->}(-2,-0.5)(-1.7,-0.5)
+  \uput{0.1}[r](-1.7,-0.5){$x$}
+  \psline{->}(-2,-0.5)(-2,-0.2)
+  \uput{0.1}[u](-2,-0.2){$t$}
 
   \psline[linestyle=dashed](-1.5,0)(-1,0)
   \psline(-1,0)(1,0)
